Added Jquery and click event

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 header">
-                <h3>TO-DO List</h3>
+                <h3>TO-DO List </h3>
             </div>
             <div class="col-xs-12 padding0">
                 <ul id='todo-list'></ul>
@@ -22,6 +22,7 @@
         </div>
     </div>
 
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 
